fix responsive and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,7 +165,12 @@
     }
 }
 
-::view-transition-old(root), ::view-transition-new(root) {
+::view-transition-old(root),
+::view-transition-new(root) {
     animation: none;
     mix-blend-mode: normal;
+}
+
+html {
+    scroll-behavior: smooth;
 }
